# OOP-CPP-Project

./: .gitignore  CMakeLists.txt  README.md
data/: sample_data.csv
docs/: PROJECT_REPORT.md
include/Module_A_Mathematical_Core/: Matrix.h  Tensor.h  Vector.h
include/Module_B_Statistical_Analysis/: CentralTendency.h  DataSummary.h  Dispersion.h  StatisticalTool.h
include/Module_C_Data_Management/: Dataset.h  MinMaxScaler.h  Scaler.h
include/Module_D_Model/: Evaluation.h  LogisticRegression.h  Model.h
src/: main.cpp
src/Module_A_Mathematical_Core/: Matrix.cpp  Tensor.cpp  Vector.cpp
src/Module_B_Statistical_Analysis/: CentralTendency.cpp  DataSummary.cpp  Dispersion.cpp
src/Module_C_Data_Management/: Dataset.cpp  MinMaxScaler.cpp
src/Module_D_Model/: Evaluation.cpp  LogisticRegression.cpp
